// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Vault card should match snapshot of active vault 1`] = `
<View
  style={{}}
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="vault_"
  >
    <View
      style={{}}
    >
      <View
        style={
          [
            {},
            {},
          ]
        }
        testID="vault"
      >
        <View
          style={{}}
        >
          <View
            style={
              [
                {},
                {
                  "right": 0,
                },
              ]
            }
          />
          <View
            style={{}}
          >
            <Text
              style={
                [
                  {},
                  [
                    {},
                    {},
                  ],
                ]
              }
              testID="vault_max_loan_label"
            >
              Max loan amount
            </Text>
            <Text
              style={
                [
                  {},
                  [
                    {},
                    {},
                  ],
                ]
              }
              testID="vault_max_loan_amount"
            >
              $0.00
            </Text>
          </View>
          <View
            style={{}}
          >
            <Text
              style={
                [
                  {},
                  [
                    {},
                    {},
                  ],
                ]
              }
              testID="vault_total_collateral_label"
            >
              Total collateral
            </Text>
            <Text
              style={
                [
                  {},
                  [
                    {},
                    {},
                  ],
                ]
              }
              testID="vault_total_collateral_amount"
            />
          </View>
        </View>
        <View
          style={{}}
        >
          <react-native-circular-progress-indicator/mock
            activeStrokeColor="#ffffff"
            activeStrokeWidth={3}
            clockwise={false}
            inActiveStrokeColor="#ffffff"
            inActiveStrokeWidth={3}
            maxValue={1}
            radius={58}
            showProgressValue={false}
            value={0.01}
          />
          <View
            style={
              [
                {},
                {
                  "maxHeight": 116,
                },
              ]
            }
          >
            <View
              style={{}}
            >
              <Text
                ellipsizeMode="middle"
                numberOfLines={1}
                style={
                  [
                    {},
                    [
                      [
                        {},
                        {
                          "maxWidth": 124,
                          "minWidth": 10,
                        },
                      ],
                      {},
                    ],
                  ]
                }
                testID="vault_vault_id"
              >
                22ffasd5ca123123123123123121231061
              </Text>
              <Text
                style={
                  [
                    {},
                    [
                      {},
                      {},
                    ],
                  ]
                }
                testID="vault_min_ratio"
              >
                0.00%
              </Text>
            </View>
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {},
                    [
                      {},
                      {},
                    ],
                  ]
                }
                testID="vault_borrow_button"
              >
                Borrow
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Vault card should match snapshot of at-risk vault 1`] = `
<View
  style={{}}
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="vault_"
  >
    <View
      style={{}}
    >
      <View
        style={
          [
            {},
            {},
          ]
        }
        testID="vault"
      >
        <View
          style={{}}
        >
          <View
            style={
              [
                {},
                {
                  "right": 0,
                },
              ]
            }
          />
          <View
            style={{}}
          >
            <Text
              style={
                [
                  {},
                  [
                    {},
                    {},
                  ],
                ]
              }
              testID="vault_max_loan_label"
            >
              Max loan amount
            </Text>
            <Text
              style={
                [
                  {},
                  [
                    {},
                    {},
                  ],
                ]
              }
              testID="vault_max_loan_amount"
            >
              $0.00
            </Text>
          </View>
          <View
            style={{}}
          >
            <Text
              style={
                [
                  {},
                  [
                    {},
                    {},
                  ],
                ]
              }
              testID="vault_total_collateral_label"
            >
              Total collateral
            </Text>
            <Text
              style={
                [
                  {},
                  [
                    {},
                    {},
                  ],
                ]
              }
              testID="vault_total_collateral_amount"
            />
          </View>
        </View>
        <View
          style={{}}
        >
          <react-native-circular-progress-indicator/mock
            activeStrokeColor="#ffffff"
            activeStrokeWidth={3}
            clockwise={false}
            inActiveStrokeColor="#ffffff"
            inActiveStrokeWidth={3}
            maxValue={1}
            radius={58}
            showProgressValue={false}
            value={0.01}
          />
          <View
            style={
              [
                {},
                {
                  "maxHeight": 116,
                },
              ]
            }
          >
            <View
              style={{}}
            >
              <Text
                ellipsizeMode="middle"
                numberOfLines={1}
                style={
                  [
                    {},
                    [
                      [
                        {},
                        {
                          "maxWidth": 124,
                          "minWidth": 10,
                        },
                      ],
                      {},
                    ],
                  ]
                }
                testID="vault_vault_id"
              >
                22ffasd5ca123123123123123121231061
              </Text>
              <Text
                style={
                  [
                    {},
                    [
                      {},
                      {},
                    ],
                  ]
                }
                testID="vault_min_ratio"
              >
                0.00%
              </Text>
            </View>
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {},
                    [
                      {},
                      {},
                    ],
                  ]
                }
                testID="vault_borrow_button"
              >
                Borrow
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Vault card should match snapshot of healthy vault 1`] = `
<View
  style={{}}
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="vault_"
  >
    <View
      style={{}}
    >
      <View
        style={
          [
            {},
            {},
          ]
        }
        testID="vault"
      >
        <View
          style={{}}
        >
          <View
            style={
              [
                {},
                {
                  "right": 0,
                },
              ]
            }
          />
          <View
            style={{}}
          >
            <Text
              style={
                [
                  {},
                  [
                    {},
                    {},
                  ],
                ]
              }
              testID="vault_max_loan_label"
            >
              Max loan amount
            </Text>
            <Text
              style={
                [
                  {},
                  [
                    {},
                    {},
                  ],
                ]
              }
              testID="vault_max_loan_amount"
            >
              $0.00
            </Text>
          </View>
          <View
            style={{}}
          >
            <Text
              style={
                [
                  {},
                  [
                    {},
                    {},
                  ],
                ]
              }
              testID="vault_total_collateral_label"
            >
              Total collateral
            </Text>
            <Text
              style={
                [
                  {},
                  [
                    {},
                    {},
                  ],
                ]
              }
              testID="vault_total_collateral_amount"
            />
          </View>
        </View>
        <View
          style={{}}
        >
          <react-native-circular-progress-indicator/mock
            activeStrokeColor="#ffffff"
            activeStrokeWidth={3}
            clockwise={false}
            inActiveStrokeColor="#ffffff"
            inActiveStrokeWidth={3}
            maxValue={1}
            radius={58}
            showProgressValue={false}
            value={0.01}
          />
          <View
            style={
              [
                {},
                {
                  "maxHeight": 116,
                },
              ]
            }
          >
            <View
              style={{}}
            >
              <Text
                ellipsizeMode="middle"
                numberOfLines={1}
                style={
                  [
                    {},
                    [
                      [
                        {},
                        {
                          "maxWidth": 124,
                          "minWidth": 10,
                        },
                      ],
                      {},
                    ],
                  ]
                }
                testID="vault_vault_id"
              >
                22ffasd5ca123123123123123121231061
              </Text>
              <Text
                style={
                  [
                    {},
                    [
                      {},
                      {},
                    ],
                  ]
                }
                testID="vault_min_ratio"
              >
                0.00%
              </Text>
            </View>
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {},
                    [
                      {},
                      {},
                    ],
                  ]
                }
                testID="vault_borrow_button"
              >
                Borrow
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Vault card should match snapshot of liquidated vault 1`] = `
<View
  style={{}}
>
  <View
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="vault_IN LIQUIDATION"
  >
    <View
      style={
        [
          {},
          {},
        ]
      }
      testID="vault_IN LIQUIDATION_vault"
    >
      <View
        style={{}}
      >
        <Image
          resizeMode="contain"
          source={1}
          style={
            {
              "height": 64,
              "width": 74,
            }
          }
          testID="vault_IN LIQUIDATION_liquidated_vault_image"
        />
        <View
          style={{}}
        >
          <View
            accessibilityState={
              {
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
          >
            <Text
              ellipsizeMode="middle"
              numberOfLines={1}
              style={
                [
                  {},
                  [
                    [
                      {},
                      {
                        "maxWidth": 124,
                        "minWidth": 10,
                      },
                    ],
                    {},
                  ],
                ]
              }
              testID="vault_IN LIQUIDATION_vault_id"
            >
              22ffasd5ca123123123123123121231061
            </Text>
            <Text />
          </View>
          <Text
            style={
              [
                {},
                [
                  {},
                  {},
                ],
              ]
            }
            testID="vault_IN LIQUIDATION_vault_description"
          >
            Liquidated vault
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
